// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card basic 1`] = `
.c1 {
  min-width: 275px;
  max-width: 355px;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  overflow: hidden;
  background-color: #ffffff;
  -webkit-transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,-webkit-transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  -webkit-transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  box-shadow: 0px 3.2px 7.2px 0px rgba(0,0,0,0.132),0px 0.6px 1.8px 0px rgba(0,0,0,0.108);
  border-radius: 4px;
}

@media (min-width:600px) {
  .c1::-webkit-scrollbar {
    width: 8px;
    background: transparent;
  }

  .c1::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: rgba(0,0,0,0.2);
  }

  .c1::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0,0,0,0.4);
  }
}

<div
  className="c0 c1"
>
  basic
</div>
`;

exports[`Card prop dynamic 1`] = `
.c1 {
  min-width: 275px;
  max-width: 355px;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  overflow: hidden;
  background-color: #ffffff;
  -webkit-transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,-webkit-transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  -webkit-transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  box-shadow: 0px 3.2px 7.2px 0px rgba(0,0,0,0.132),0px 0.6px 1.8px 0px rgba(0,0,0,0.108);
  border-radius: 4px;
}

.c0:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:600px) {
  .c1::-webkit-scrollbar {
    width: 8px;
    background: transparent;
  }

  .c1::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: rgba(0,0,0,0.2);
  }

  .c1::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0,0,0,0.4);
  }
}

<div
  className="c0 c1"
>
  dynamic
</div>
`;

exports[`Card prop pure 1`] = `
.c1 {
  min-width: 275px;
  max-width: 355px;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  overflow: hidden;
  background-color: #ffffff;
  -webkit-transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,-webkit-transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  -webkit-transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  box-shadow: none;
}

@media (min-width:600px) {
  .c1::-webkit-scrollbar {
    width: 8px;
    background: transparent;
  }

  .c1::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: rgba(0,0,0,0.2);
  }

  .c1::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0,0,0,0.4);
  }
}

<div
  className="c0 c1"
>
  pure
</div>
`;

exports[`Card with derived component 1`] = `
.c1 {
  min-width: 275px;
  max-width: 355px;
  -webkit-overflow-scrolling: touch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 16px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  padding: 16px;
  -webkit-overflow-scrolling: touch;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px 16px;
  -webkit-overflow-scrolling: touch;
}

.c8 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  cursor: pointer;
  min-width: 56px;
  vertical-align: middle;
  border: 2px solid;
  border-radius: 2px;
  text-align: center;
  line-height: 1.5;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dedede;
  padding: 0 8px;
}

.c8:disabled {
  color: #8c8c8c;
  background-color: #e9e9e9;
  cursor: not-allowed;
  pointer-events: none;
}

.c8:hover,
.c8:focus {
  border-color: #b5b5b5;
}

.c8:active {
  background-color: #dedede;
  border-color: #595959;
}

.c0 {
  overflow: hidden;
  background-color: #ffffff;
  -webkit-transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,-webkit-transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  -webkit-transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,transform 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  box-shadow: 0px 3.2px 7.2px 0px rgba(0,0,0,0.132),0px 0.6px 1.8px 0px rgba(0,0,0,0.108);
  border-radius: 4px;
}

.c3 {
  margin: 0;
  font-family: Segoe UI,-apple-system,sans-serif,Roboto,Helvetica,Arial;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
}

.c5 {
  margin: 0;
  font-family: Segoe UI,-apple-system,sans-serif,Roboto,Helvetica,Arial;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.75;
  margin-bottom: 0.35em;
}

.c6 {
  margin: 0;
  color: #8c8c8c;
  font-family: Segoe UI,-apple-system,sans-serif,Roboto,Helvetica,Arial;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
  margin-bottom: 0.35em;
}

@media (min-width:600px) {
  .c1::-webkit-scrollbar {
    width: 8px;
    background: transparent;
  }

  .c1::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: rgba(0,0,0,0.2);
  }

  .c1::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0,0,0,0.4);
  }
}

@media (min-width:600px) {
  .c2::-webkit-scrollbar {
    width: 8px;
    background: transparent;
  }

  .c2::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: rgba(0,0,0,0.2);
  }

  .c2::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0,0,0,0.4);
  }
}

@media (min-width:600px) {
  .c4::-webkit-scrollbar {
    width: 8px;
    background: transparent;
  }

  .c4::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: rgba(0,0,0,0.2);
  }

  .c4::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0,0,0,0.4);
  }
}

@media (min-width:600px) {
  .c7::-webkit-scrollbar {
    width: 8px;
    background: transparent;
  }

  .c7::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: rgba(0,0,0,0.2);
  }

  .c7::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0,0,0,0.4);
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    display="flex"
  >
    <h2
      className="c3"
    >
      News
    </h2>
  </div>
  <div
    className="c4"
  >
    <h3
      className="c5"
    >
      NASA scientists track Greenland’s melting ice, and the findings are not good
    </h3>
    <h6
      className="c6"
      color="standard.dark2"
    >
      MarketWatch · 11 hours ago
    </h6>
  </div>
  <div
    className="c7"
    display="flex"
  >
    <button
      className="c8"
      size="small"
    >
      Learn More
    </button>
  </div>
</div>
`;
